# thomas

./: .gitignore  README.md  pyproject.toml
src/: cli.py  config.py  constants.py
src/node/: node.py
src/p2p/: node.py  node_connection.py
src/p2p/messages/: message.py  new_transaction.py
src/p2p/requests/: __init__.py  discover_peers.py  get_msg.py  get_msgs.py  get_tangle.py  request.py
src/tangle/: __init__.py  signed.py  tangle.py  transaction.py
src/tangle/messages/: __init__.py  message.py  new_transaction.py
src/utils/: pow.py
src/wallet/: wallet.py
